welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: type mismatch;
 found   : Unit
 required: Int
	var newX:Int = ()
                       ^ColumnByColumn:13: error: Boolean does not take parameters
  while (!estPositionFinale()) {
                           ^ColumnByColumn:14: error: not enough arguments for method vaPositionSuivante: (oldX: Int, oldY: Int)Unit.
Unspecified value parameters oldX, oldY.
    vaPositionSuivante()
                      ^