welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def estPositionFinale:Boolean = {
  if (getX() == getMondeLargeur() - 1 && getY() == getMondeHauteur() - 1)
  	return true
  
  return false
}

def vaPositionSuivante(oldX: Int, oldY: Int) {
	var newX:Int = ()
  var newY:Int = (oldY + 1) % getMondeHauteur()
}

override def run() {
  while (!estPositionFinale()) {
    vaPositionSuivante()
  }
}